tests/fixtures/pass/box_resource_drop_trap.sali
let Resource = struct(value: i32)

extend Resource: Drop {
  let drop(mut borrow self)(): () = {
    let trapped = 1 / self.value
  }
}

let main(): i32 = {
  let boxed = box_new(Resource(0))
  0
}
