tests/fixtures/fail/borrow_type_signature.sali
let inspect(value: borrow i32): i32 = 42
let main(): i32 = 42
